_content/css: fix for icon to appear in High Contrast Light Mode
https://screencast.googleplex.com/cast/NTUwNDM3ODE0NzQzODU5Mnw3ZDI4OTZhMy03ZA

Reviewed-on: https://go-review.googlesource.com/c/website/+/506677
Run-TryBot: Jamal Carvalho <jamal@golang.org>
TryBot-Result: Gopher Robot <gobot@golang.org>

--- a/_content/css/styles.css
+++ b/_content/css/styles.css
@@ -431,6 +431,10 @@ a.Footer-link--primary {
 .go-Icon--inverted {
   filter: brightness(0) saturate(100%) invert(100%) sepia(97%) saturate(13%)
     hue-rotate(245deg) brightness(103%) contrast(107%);
+  @media (forced-colors:active) and (prefers-color-scheme: light) {
+    filter: brightness(500%) saturate(100%) invert(100%) sepia(97%) saturate(13%)
+    hue-rotate(245deg) brightness(103%) contrast(107%);
+  }
 }
 .Footer-feedbackButton {
   background: none;
